--- a/style.css
+++ b/style.css
@@ -4,44 +4,15 @@
     padding: 0;
     box-sizing: border-box;
 }
-.rodape-final {
-    display: grid;
-    align-items: center;
-    justify-content: space-between;
-    background-color: peachpuff;
-    position: absolute;
-    bottom: 0px;
-    width: 100%;
-    height: 400px;
-}
-.rodape-rede-social {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.logo-rede-social {
-    width: 50%;
-    display: flex;
-    justify-content: right;
-    align-items: stretch;
-    margin: 20px;
-}
-.logo-rodape {
-    width: 300px;
-    height: 300px;
-    margin: 30px;  
-}
-#rede-social {
-    margin: 10px;
-}
+
 
 /*---------HEADER------------ */
+
 
 .cabecalho {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding:25px;
     background-color: peachpuff;
     color: rgb(97, 56, 56);
     height: 300px;
@@ -50,6 +21,7 @@
 .cabecalho img{
     height: 300px;
     width: 300px;
+    padding: 20px;
 }
 
 .cabecalho h1{
@@ -68,6 +40,8 @@
     list-style: none;
     justify-content: space-evenly;
     align-items: center;
+    padding: 5px;
+    font-size: 25px;
 }
 
 a {
@@ -98,27 +72,77 @@ a {
     text-align: center;
 }
 
-.selecao{
-    display: flex;
-    margin: 20px 20px 200px 20px;
-    padding: 25px;
-    background-color: pink;
-    justify-content: center;
+.japones {
+    font-weight: bold;
+    font-size: 26px;
 }
 
 .secao2{
-    display:grid;
-    grid-template-columns: repeat(3,1fr);
+    display:flex;
     gap: 10px;
     justify-content: space-between;
-    padding: 20px;
     background-color: white;
+    height: 250px;
+    margin-bottom: 150px;
 }
 
-.imagem-secao2{
+.imagem-secao2 {
+    display:flex;
+    background-color: #AFD6EE;
+    max-width: 100%;
+    justify-content: center;
+}
+
+.frase-secao2 {
+    display: flex;
     align-items: center;
     text-align: center;
+    font-size: 40px;
+}
+
+.frase1, .frase2, .frase3 {
+    display: flex;
     align-items: center;
+    justify-content: center;
+    font-size: 30px;
+}
+
+.count {
+    color: white;
+    font-size: 80px;
+}
+
+/*---------FOOTER------------ */
+
+.rodape-final {
+    display: grid;
+    align-items: center;
+    justify-content: space-between;
+    background-color: peachpuff;
+    position: relative;
+    bottom: 0px;
+    width: 100%;
+    height: 400px;
+}
+.rodape-rede-social {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.logo-rede-social {
+    width: 50%;
+    display: flex;
+    justify-content: right;
+    align-items: stretch;
+    margin: 20px;
+}
+.logo-rodape {
+    width: 300px;
+    height: 300px;
+    margin: 30px;  
+}
+#rede-social {
+    margin: 10px;
 }
 
 /*---------MEDIA QUERY------------ */
@@ -140,7 +164,10 @@ a {
         font-size: 25px;
     }
 
-    
+    .imagem-secao2{
+        display: flex;
+        flex-wrap: wrap;
+    }
     
 }
 
